apps/nginx/prod/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: nginx-prod
spec:
  mtls:
    mode: STRICT
