apps/nginx/prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
  # strategy:
  #   blueGreen:
  #     activeService: nginx-active
  #     previewService: nginx-preview
  #     autoPromotionEnabled: false
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: nginx
            routes:
            - default
          destinationRule:
            name: nginx
            stableSubsetName: stable
            canarySubsetName: canary
      steps:
      - setWeight: 10
      - pause: { duration: 30s }
      - setWeight: 25
      - pause: { duration: 30s }
      - setWeight: 50
      - pause: { duration: 30s }
      - setWeight: 100
