apps/nginx/prod/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-active
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
