apps/nginx/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-prod
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
