apps/nginx/prod/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx
  namespace: nginx-prod
spec:
  host: nginx.nginx-prod.svc.cluster.local
  subsets:
  - name: stable
    labels:
      rollouts-pod-template-hash: stable
  - name: canary
    labels:
      rollouts-pod-template-hash: canary
