apps/nginx/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "*"
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: nginx-active
